webook/k8s-mysql-deployment.yaml
# 实际部署 MySQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
#           这个是容器里面的路径
            - mountPath: /var/lib/mysql
#             pod 里面用哪个
              name: mysql-storage
          ports:
            - containerPort: 3306
#        -name: webook-haddoop
      restartPolicy: Always
#     我整个 pod 有哪些
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
#           这个是 pvc 的名字，接下来要在 k8s-mysql-pvc.yaml 里面定义
            claimName: webook-mysql-claim
#        -name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: webook-hadoop-claim
