webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
#   告诉它我要用nginx
    ingressClassName: nginx
    rules:
        - host: live.webook.com
          http:
            paths:
              - backend:
                  service:
                    name: webook
                    port:
                      number: 80
                pathType: Prefix
                path : /
